simtbx.log
*** Error compiling 'simtbx/nanoBragg/brunger_example/run_example.py'...
  File "simtbx/nanoBragg/brunger_example/run_example.py", line 67
    print SIM.Fbg_vs_stol[1]
            ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(SIM.Fbg_vs_stol[1])?

*** Error compiling 'simtbx/nanoBragg/tst_gaussian_mosaicity.py'...
  File "simtbx/nanoBragg/tst_gaussian_mosaicity.py", line 55
    print "%27s"%(str(RLP.elems)),"Vector length:%8.6f"%(RLP.length()),
               ^
SyntaxError: invalid syntax

*** Error compiling 'simtbx/nanoBragg/tst_nanoBragg_basic.py'...
  File "simtbx/nanoBragg/tst_nanoBragg_basic.py", line 50
    print "GOTHERE seed=",SIM.seed
                        ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "GOTHERE seed=",SIM.seed)?

*** Error compiling 'simtbx/nanoBragg/tst_nanoBragg_minimal.py'...
  File "simtbx/nanoBragg/tst_nanoBragg_minimal.py", line 17
    print SIM.missets_deg
            ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(SIM.missets_deg)?

